add_executable(01_basic_matrix_uses 01_basic_matrix_uses.cpp)
target_link_libraries(01_basic_matrix_uses Matrix::matrix)

add_executable(02_construction_and_assignment 02_construction_and_assignment.cpp)
target_link_libraries(02_construction_and_assignment Matrix::matrix)

add_executable(03_subscripting_and_slicing 03_subscripting_and_slicing.cpp)
target_link_libraries(03_subscripting_and_slicing Matrix::matrix)

add_executable(04_matrix_arithmetric_operations 04_matrix_arithmetric_operations.cpp)
target_link_libraries(04_matrix_arithmetric_operations Matrix::matrix)

add_executable(05_solving_linear_equations 05_solving_linear_equations.cpp)
target_link_libraries(05_solving_linear_equations Matrix::matrix)

add_executable(example example.cpp)
target_link_libraries(example Matrix::matrix)

add_executable(dgemm_example dgemm_example.cpp)
target_link_libraries(dgemm_example Matrix::matrix)